employee email, industry based type and brand and job flow updated
