# src/controllers/job.ts
@@ -2,33 +2,74 @@ import {Request, Response} from 'express'
 import { Status, Messages, JobStatus } from '../common/constants'
 
 import { Job, IJob } from '../models/Job'
-import { ICompany } from '../models/Company'
-import { IUser } from '../models/User'
+import { CustomerEquipment, ICustomerEquipment } from '../models/CustomerEquipment'
 
 export const createJob = (req: Request, res: Response) => {
 
     const params = req.body
 
-    const job = new Job(
-        {
-            dateTime: params.dateTime,
-            technician: params.technicianId,
-            customer: params.customerId,
-            type: params.jobTypeId,
-            company: req.companyId,
-            comment: ''
-        }
-    )
+    if(params.equipmentId != undefined && params.equipmentId != null) {
+        CustomerEquipment.findById(params.equipmentId, 
+        (err: any, equipment: ICustomerEquipment)=>{
+            
+            if (err) {
+                return res.json({'status': Status.Error, 'message': Messages.GenericError})
+            }
+    
+            const job = new Job(
+                {
+                    dateTime: params.dateTime,
+                    technician: params.technicianId,
+                    customer: params.customerId,
+                    type: params.jobTypeId,
+                    company: req.companyId,
+                    comment: '',
+                    description: params.description,
+                    equipmentId: params.equipmentId,
+                }
+            )
+        
+            job.save((err: any) => {
+        
+                if (err) {
+                    return res.json({'status': Status.Error, 'message': Messages.GenericError})
+                }
+                
+                equipment.jobs.push(job._id)
+                equipment.updateOne({jobs: equipment.jobs}, (err:any, raw: any)=> {
+                    if (err) {
+                        return res.json({'status': Status.Error, 'message': Messages.GenericError})
+                    }   
 
-    job.save((err: any) => {
+                    return res.json({'status': Status.Success, 'message': 'Job created successfully.'})
+                });
+        
+            })
+        })
 
-        if (err) {
-            return res.json({'status': Status.Error, 'message': Messages.GenericError})
-        }
+    }else{
+        const job = new Job(
+            {
+                dateTime: params.dateTime,
+                technician: params.technicianId,
+                customer: params.customerId,
+                type: params.jobTypeId,
+                company: req.companyId,
+                comment: '',
+                description: params.description,
+                equipmentId: params.equipmentId,
+            }
+        )
+    
+        job.save((err: any) => {
+            if (err) {
+                return res.json({'status': Status.Error, 'message': Messages.GenericError})
+            }
 
-        return res.json({'status': Status.Success, 'message': 'Job created successfully.'})
-
-    })
+            return res.json({'status': Status.Success, 'message': 'Job created successfully.'})
+        })
+    }
+   
 
 }
 
@@ -111,7 +152,9 @@ export const updateJob = (req: Request, res: Response) => {
             if (err) {
                 return res.json({'status': Status.Error, 'message': Messages.GenericError})
             }
-
+            if(job.status == JobStatus.FINISHED) {
+                return res.json({'status': Status.Error, 'message': "Edit job is not allowed onece it is finished"})
+            }
             job.updateOne(
                 {comment: params.comment, status: params.status},
                 (err: any, raw: any)=> {
@@ -121,6 +164,33 @@ export const updateJob = (req: Request, res: Response) => {
                     }
     
                     return res.json({'status': Status.Success, 'message': 'Job updated successfully.'})
+                }
+            )
+        }
+    )
+}
+
+export const startJob = (req: Request, res: Response) => {
+
+    const params = req.body
+
+    Job.findOne(
+        { _id: params.jobId },
+        (err: any, job: IJob)=>{
+
+            if (err) {
+                return res.json({'status': Status.Error, 'message': Messages.GenericError})
+            }
+
+            job.updateOne(
+                {status: JobStatus.STARTED},
+                (err: any, raw: any)=> {
+                    
+                    if (err) {
+                        return res.json({'status': Status.Error, 'message': Messages.GenericError})
+                    }
+    
+                    return res.json({'status': Status.Success, 'message': 'Job started successfully.'})
                 }
             )
         }
@@ -139,6 +209,10 @@ export const editJob = (req: Request, res: Response) => {
             if (err) {
                 return res.json({'status': Status.Error, 'message': Messages.GenericError})
             }
+            
+            if(job.status == JobStatus.CANCELED || job.status == JobStatus.FINISHED) {
+                return res.json({'status': Status.Error, 'message': "Edit job is not allowed onece it is cancelled or finished"})
+            }
 
             job.updateOne(
                 {technician: params.technicianId, dateTime: params.dateTime},
@@ -154,3 +228,37 @@ export const editJob = (req: Request, res: Response) => {
         }
     )
 }
+
+export const getJobDetails = (req: Request, res: Response) => {
+
+    const params = req.body
+    
+    Job.findById(params.jobId)
+        .populate({
+            path: 'technician',
+            select: 'profile.displayName'
+        })
+        .populate({
+            path: 'customer'
+        })
+        .populate({
+            path: 'type',
+            select: 'title'
+        })
+        .populate({
+            path: 'company',
+            select: 'info profile address contact'
+        })
+        .exec((err: any, job: IJob)=>{
+
+            if (err) {
+                return res.json({'status': Status.Error, 'message': Messages.GenericError})
+            }
+
+            return res.json({'status': Status.Success, 'job': job})    
+
+        }
+    )
+
+}
+
