# src/models/EquipmentBrand.ts
@@ -3,6 +3,7 @@ import mongoose, { Document, Schema } from 'mongoose'
 export interface IEquipmentBrand extends Document {
 
     title: string
+    industry: string
     createdBy: Schema.Types.ObjectId
 
 }
@@ -10,6 +11,11 @@ export interface IEquipmentBrand extends Document {
 const EquipmentBrandSchema = new Schema({
 
     title: String,
+    industry: {
+        type: Schema.Types.ObjectId,
+        ref: 'Industry',
+        default: null
+    },
     createdBy: {
         type: Schema.Types.ObjectId,
         ref: 'Company'
