# src/models/EquipmentType.ts
@@ -3,6 +3,7 @@ import mongoose, { Document, Schema } from 'mongoose'
 export interface IEquipmentType extends Document {
 
     title: string
+    industry: string
     createdBy: Schema.Types.ObjectId
 
 }
@@ -10,6 +11,11 @@ export interface IEquipmentType extends Document {
 const EquipmentTypeSchema = new Schema({
 
     title: String,
+    industry: {
+        type: Schema.Types.ObjectId,
+        ref: 'Industry',
+        default: null
+    },
     createdBy: {
         type: Schema.Types.ObjectId,
         ref: 'Company'
