# src/models/Job.ts
@@ -7,7 +7,9 @@ export interface IJob extends Document {
     customer: Schema.Types.ObjectId
     type: Schema.Types.ObjectId
     company: Schema.Types.ObjectId
+    equipmentId: string
     comment: string
+    description: string
     status: number
 }
 
@@ -34,7 +36,15 @@ const JobSchema = new Schema({
         ref: 'Company',
         required: true
     },
+    equipmentId: {
+        type: Schema.Types.ObjectId,
+        ref: 'Company',
+        default: null
+    },
     comment: {
+        type: String
+    },
+    description: {
         type: String
     },
     status: {
